--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
     border-bottom:solid black 1px;
     gap: 10px;
     align-items:center;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }  
 .navbar__s1__title{
     color:#A435F0;
@@ -26,13 +30,15 @@ body {
     width:60%;
     display :flex; 
     gap:10px;
-    align-items:center;
+    align-items:center; 
+    
  }
 
  .navbar__s2 input{
     border:none;
     font-size:16px;
-     Width:100;      
+     Width:100;  
+     background-color: transparent;    
  }
 
  .navbar__s2 input:focus{
@@ -44,6 +50,29 @@ body {
     align-items:center; 
  }
 
+ /* My learning Popup*/
+
+ .mylearning
+ {
+   position: relative;
+   cursor: pointer;
+ }
+
+ .mylearning__popup
+ {
+   position: absolute;
+   background-color:white ;
+   border:solid black 1px;
+   width: 100px ;
+   top:150%;
+   padding:20px;
+   right: 0;
+   display: none;
+ }
+
+ .mylearning:hover .mylearning__popup{
+   display:block;
+ }
  .categories{
     display:flex; 
     padding:10px;
@@ -54,15 +83,24 @@ body {
  .categories p{
 background-color:#A435F0;
 color:white;
-padding:5px;
-border-radius:30px;
 padding:10px;
+border-radius: 30px;
 
  }
-
+ .sale-image{
+   position: relative;
+ }
  .sale-image img{
     width:100%; 
  }
+ .sale-image__offer{
+   width: 35;
+   border: solid black 2px;
+   background-color: white;
+   padding:2% ;
+ }
+
+ 
 
  .recommended{
    padding:10px;
